<resources>
    <string name="app_name">Tripie</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="tripie_logo">Tripie Logo</string>
    <string name="image_button_back">Image button back</string>
    <string name="detail_booking">Detail Booking</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="detail_penumpang">Detail Penumpang</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="total">Total :</string>
    <string name="booking">Booking</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="image_beach">image beach</string>
    <string name="tiket_berhasil_dipesan">Tiket Berhasil Dipesan</string>
    <string name="anda_bisa_melihat_tiket_anda_di_halaman_history_tiket">Anda bisa melihat tiket anda di halaman history tiket</string>
    <string name="halaman_utama">Halaman Utama</string>
    <string name="detail_ticket">Detail Ticket</string>
    <string name="penumpang">Penumpang</string>
    <string name="jamal_agung">Jamal Agung</string>
    <string name="cgk_jakarta">CGK, Jakarta</string>
    <string name="dps_bali">DPS, Bali</string>
    <string name="_26_nov_2022">26 Nov, 2022</string>
    <string name="_07_40">07:40</string>
    <string name="_09_10">09:10</string>
    <string name="harga">Harga :</string>
    <string name="tipe_penerbangan">Tipe Penerbangan :</string>
    <string name="idr_1_152_580">IDR 1.152.580</string>
    <string name="tipe">Tipe</string>
    <string name="tanggal_pulang">Tanggal Pulang :</string>
    <string name="tanggal">Tanggal</string>
    <string name="booking_id">Booking ID</string>
    <string name="kelas">Kelas</string>
    <string name="maskapai">Maskapai</string>
    <string name="_12345">12345</string>
    <string name="ekonomi">Ekonomi</string>
    <string name="batik_air">Batik Air</string>
    <string name="line">line</string>
    <string name="flight_detail">Flight Detail</string>
    <string name="favorit">Favorit</string>
    <string name="image_location">image location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="image_profile">image profile</string>
    <string name="alamat">Alamat</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="password">Password</string>
    <string name="edit_data">Edit Data</string>
    <string name="skip">Skip</string>
    <string name="kunjungi_objek_wisata">Kunjungi Objek Wisata</string>
    <string name="jelajahi_objek_wisata_di_seluruh_penjuru_dunia">Jelajahi objek wisata di seluruh penjuru dunia</string>
    <string name="search_flight">Search Flight</string>
    <string name="history_booking_ticket">History Booking Ticket</string>
    <string name="halo_bang_jono">Halo, Bang Jono</string>
    <string name="image_button_notification">image button notification</string>
    <string name="mau_liburan_kemana_kali_ini">Mau liburan kemana kali ini?</string>
    <string name="dari">Dari</string>
    <string name="klik_untuk_pilih_bandara_asal">Klik untuk pilih bandara asal</string>
    <string name="ke">Ke</string>
    <string name="klik_untuk_pilih_tujuan">Klik untuk pilih tujuan</string>
    <string name="tanggal_keberangkatan">Tanggal Keberangkatan</string>
    <string name="tanggal_npulang">Tanggal\nPulang</string>
    <string name="klik_untuk_pilih_kelas_pesawat">Klik untuk pilih kelas pesawat</string>
    <string name="search">Search</string>
    <string name="one_way">One-Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="destinasi_populer">Destinasi Populer</string>
    <string name="lihat_semua"><![CDATA[Lihat Semua >]]></string>
    <string name="masukkan_jumlah_penumpang">Masukkan jumlah penumpang</string>
    <string name="login">Login</string>
    <string name="masuk">Masuk</string>
    <string name="atau_login_dengan">Atau login dengan</string>
    <string name="image_google">image google</string>
    <string name="google">Google</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="next">Next</string>
    <string name="popular_destination">Popular Destination</string>
    <string name="your_profile">Your Profile</string>
    <string name="keluar">Keluar</string>
    <string name="daftar_akun">Daftar akun</string>
    <string name="mendaftar_sebagai">Mendaftar sebagai :</string>
    <string name="akun_berhasil_dibuat">Akun berhasil dibuat</string>
    <string name="setelah_ini_anda_dapat_login_menggunakan_akun_yang_telah_terdaftar">Setelah ini anda dapat login menggunakan akun yang telah terdaftar</string>
    <string name="nikmati_keindahan">Nikmati Keindahan</string>
    <string name="temukan_beragam_objek_wisata_dalam_satu_genggaman">Temukan beragam objek wisata dalam satu genggaman</string>
    <string name="take_off_with_confidence">Take Off With Confidence</string>
    <string name="mudahkan_liburanmu">Mudahkan Liburanmu</string>
    <string name="kami_pastikan_liburanmu_mudah_nyaman_dan_terjangkau">Kami pastikan liburanmu mudah, nyaman dan terjangkau</string>
    <string name="favorit_flight">Favorit Flight</string>
    <string name="image_popular_destination">image popular destination</string>
    <string name="see_ticket_details">See Ticket Details</string>
    <string name="pembayaranmu_sudah_kami_terima_mohon_tunggu_konfirmasi_selanjutnya_lihat_rincian_penerbangan_pada_histori_pesanan_detail_tiket">Pembayaranmu sudah kami terima, mohon tunggu konfirmasi selanjutnya. Lihat rincian penerbangan pada histori pesanan detail tiket.</string>
    <string name="home">Home</string>
    <string name="histori">Histori</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
</resources>