<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:orderInCategory="100"
        android:title="@string/home"
        android:icon="@drawable/home_2" />

    <item
        android:id="@+id/historiFragment"
        android:orderInCategory="100"
        android:title="@string/histori"
        android:icon="@drawable/histori" />


    <item
        android:id="@+id/whistlistFragment"
        android:icon="@drawable/heart"
        android:orderInCategory="100"
        android:title="@string/favorite" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:orderInCategory="100"
        android:title="@string/profile" />

</menu>