<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_onboarding_1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.onboarding.fragment.FirstOnboardingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtSkipFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:lineHeight="45sp"
            android:text="@string/kunjungi_objek_wisata"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:layout_marginVertical="25dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:letterSpacing="0.01"
            android:text="@string/jelajahi_objek_wisata_di_seluruh_penjuru_dunia"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="125dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/line1"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:indicatorColor="@color/black"
                app:trackColor="@color/grey" />

            <androidx.cardview.widget.CardView
                android:id="@+id/line2"
                android:layout_width="85dp"
                android:layout_height="4dp"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/grey"
                app:cardCornerRadius="50dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/line3"
                android:layout_width="85dp"
                android:layout_height="4dp"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/grey"
                app:cardCornerRadius="50dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>